Correct element spacing on landing page after removing redundant mobile header

--- a/app/assets/stylesheets/modules/splash/_@media_splash.scss
+++ b/app/assets/stylesheets/modules/splash/_@media_splash.scss
@@ -6,16 +6,41 @@
 @media (max-width: 40em){
   .splash{
     background: $alpha;
+    .cflogo{
+      position: absolute;
+      top: 0;
+      height: 8vh;
+      margin: 0;
+      width: 100%;
+      padding: 0;
+      background: transparent;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img{
+        height: 5vh;
+        width: auto;
+        margin: 0;
+        z-index: 1;
+      }
+    }
     .student, .mentor{
-      padding-top: 5em;
+      padding-top: 40vh;
+    }
+    h3{
+      font-size: .5em;
+      // font-style: normal;
+      padding-top: 3em;
     }
     p{
       &.whoFor{
       background: $alpha_light20;
       margin: 0;
       font-style: normal;
+      font-size: .5em;
       }
       &.learnMore{
+        font-size: .5em;
         font-style: normal;
       }
     }
@@ -29,17 +54,20 @@
         font-size: .75em;
         font-style: normal;
         p{
+          font-family: $header-font;
           margin: 0;
           margin-top: -2em;
           padding: 0;
           font-style: normal;
+          font-size: 1em;
         }
         span{
           padding-top: 3em;
-          font-family: $header-font;
+          font-family: $title-font;
           width: 100%;
           color: $delta;
           text-align: center;
+          font-size: 1.5em;
         }
       }
       &.button-wrap, .haveAccount{
@@ -98,51 +126,6 @@
     }
 
 /*================================================
-                  MOBILE HEADER
-=================================================*/
-
-    header{
-      display: flex;
-      align-items: center;
-      background: $delta;
-      height: 8vh;
-      figure{
-        width: 20vw;
-        height: auto;
-        padding-bottom: 1vh;
-        display: block;
-        justify-content: center;
-        align-items: center;
-        background: $delta;
-        opacity: .7;
-      }
-      img{
-        padding: 0;
-        margin: 0 auto;
-        display: block;
-      }
-      button{
-        &.mobileLogin, &.mobileSignup{
-          display: inline;
-          font-size: 2vh;
-          margin: 0 1vw;
-          padding: .1em;
-          width: 18vw;
-          height: 5vh;
-          background: white;
-          opacity: .7;
-          color: $charlie;
-          border: none;
-          text-transform: uppercase;
-          font-family: $header-font;
-        }
-        &.mobileSignup{
-         margin-left: 40vw;
-        }
-      }
-    }
-
-/*================================================
               MOBILE MAIN CONTENT AREAS
 =================================================*/
 
@@ -150,15 +133,12 @@
       position: relative;
       &.copy{
         top: 0;
-        height: 65vh;
+        height: 75vh;
         margin:  0;
         background-image: url(image-path("dexter-sarah3.jpg"));
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center top;
-      }
-      h3{
-        display: none;
       }
       &.roleButtons{
         background: $alpha_light90;
@@ -190,11 +170,11 @@
 
   section{
     position: relative;
-    &.student{
-      padding: 30vh 16vw 0 0;
+    &.student, &.mentor{
+      padding: 45vh 16vw 0 0;
     }
     &.mentor{
-      padding: 30vh 0 0 16vw;
+      padding: 45vh 0 0 16vw;
     }
     &.button-wrap{
       width: 100%;
